Updates to infrastructure.
- Started creating base controller.
- Added stubs for authenticating into the system.
- Updated test controller to use base controller.
- Implemented caching service using Redis.
- Added various string constants.
- Added various stubs for view models.

--- a/GameLib.api/appsettings.json
+++ b/GameLib.api/appsettings.json
@@ -16,5 +16,9 @@
   "Supabase": {
     "Url": "",
     "Key": ""
+  },
+  "Cache": {
+    "ConnectionString": "",
+    "DefaultItemExpirySeconds": 3600 
   }
 }
