--- a/GameLib.api/GameLib.api.csproj
+++ b/GameLib.api/GameLib.api.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+        <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
         <PackageReference Include="Supabase" Version="1.1.1" />
     </ItemGroup>
 
